# easy-machine-simulator

./: .dockerignore  .gitignore  CLAUDE.md  Dockerfile  IMPLEMENTATION.md  PRD.md  README.md  docker-compose.yml  docker-entrypoint.sh  index.html  package.json  tsconfig.json  vite.config.ts
public/sample-toolpaths/: circle.nc  out-of-bounds.nc  square.nc
rust/: Cargo.toml
rust/crates/ems-collision/: Cargo.toml
rust/crates/ems-collision/src/: bounds.rs
rust/crates/ems-core/: Cargo.toml
rust/crates/ems-core/src/: lib.rs  math.rs  types.rs
rust/crates/ems-gcode/: Cargo.toml
rust/crates/ems-gcode/src/: parser.rs
rust/crates/ems-kinematics/: Cargo.toml
rust/crates/ems-kinematics/src/: chain.rs
rust/crates/ems-wasm/: Cargo.toml
rust/crates/ems-wasm/src/: lib.rs
src/: main.ts
src/machine/: CableHandleManager.ts  CableRouter.ts  MachineBuilder.ts  MachineLoader.ts  ModelLoader.ts
src/machine/presets/: cnc-3axis.json  cnc-5axis.json  robot-6axis.json
src/renderer/: AnimationController.ts  EnvelopeOverlay.ts  MachineVisualizer.ts  ProjectionViews.ts  RendererFactory.ts  SceneManager.ts  ToolpathVisualizer.ts
src/simulation/: SimulationEngine.ts
src/types/: machine.ts  simulation.ts  toolpath.ts  worker-messages.ts
src/ui/: CablePanel.ts  ControlPanel.ts  JointControlPanel.ts  MachinePanel.ts  ReportExporter.ts  ThemeToggle.ts  ToolpathPanel.ts  UIController.ts  ViewPanel.ts  ViolationLog.ts  panelUtils.ts
src/ui/styles/: main.css
src/workers/: WorkerPool.ts  wasm.worker.ts
